--- a/.github/workflows/publish-prerelease.yml
+++ b/.github/workflows/publish-prerelease.yml
@@ -29,7 +29,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
       - run: |
           npm ci
-          npm run compile
+          npm run build
       - run: cd dist/ && npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version && npm pack
       - name: Upload
         uses: actions/upload-artifact@v4
