--- a/.github/workflows/publish-prerelease.yml
+++ b/.github/workflows/publish-prerelease.yml
@@ -30,7 +30,7 @@ jobs:
       - run: |
           npm ci
           npm run build
-      - run: ls . && cd dist/ && ls -la dist/ && npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version && npm pack
+      - run: ls . && cd dist/ && ls . && npm version prerelease --preid=ci-$GITHUB_RUN_ID --no-git-tag-version && npm pack
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
