--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "module": "dist/yagc.js",
   "files": [
-    "dist"
+    "dist/**/*"
   ],
   "scripts": {
     "lint": "eslint .",
